2007-11-06  Akim Demaille  <demaille@gostai.com>

	Macro style.
	* include/urbi/uabstractclient.hh: Use a simpler and more consitent
	style for macros.

2007-10-30  Akim Demaille  <demaille@gostai.com>

	Update PackageInfo use.
	* configure.ac: Set copyright info.
	* src/liburbi/package-info.cc, src/liburbi/uobject.cc: Adjust.

2007-10-30  Matthieu Nottale  <nottale@gostai.com>

	Fix UVALUE_OPERATORS macro.
	* src/liburbi/uobject/uvalue-common.cc: set type to DataType macro
	   parameter.

2007-10-29  Matthieu Nottale  <nottale@gostai.com>

	Fix inclusions problems.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template:
	   - Remove leftover back-cast in non-member case.
	   - Move UObjectList typedef...
	* src/liburbi/uobject/urbi/uobject.hh: ...here.
	* src/liburbi/uobject/urbi/utypes-common.hh: #include libport/cstring.
	* src/liburbi/uobject/urbi/uvalue.hh: #include <vector>.
	* src/liburbi/uobject/urbi/uvar.hh: #include uvalue.hh.

2007-10-24  Matthieu Nottale  <nottale@gostai.com>

	Doc fix.
	* include/urbi/uabstractclient.hh,
	* include/urbi/usyncclient.hh: Here and there.

2007-10-24  Matthieu Nottale  <nottale@gostai.com>

	Fix error message when recv returns 0.
	* src/liburbi/uclient.cc: recv()==0 means connection closed.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	externals-up.
	* src/liburbi/uclient.cc: Space changes.

2007-10-23  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use more BOOST_CPPFLAGS.
	* src/examples/Makefile.am,
	* src/utils/Makefile.am (AM_CPPFLAGS): New.  Add BOOST_CPPFLAGS.

2007-10-23  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use BOOST_CPPFLAGS.
	* src/liburbi/Makefile.am (AM_CPPFLAGS): New.  Add BOOST_CPPFLAGS.

2007-10-23  Akim Demaille  <demaille@gostai.com>

	Better recv failure messages.
	* src/liburbi/uclient.cc: recv returning 0 and <0 are
	two different cases.

2007-10-23  mefyl  <mefyl@lrde.epita.fr>

	Factorize code.
	* src/liburbi/uobject/urbi/uvalue.hh,
	* src/liburbi/uobject/uvalue-common.cc: Factorize cleanup code